# simple_webcam

./: CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml  setup.py
launch/: camera_pipeline+machine.launch  camera_pipeline.launch
nodes/: camera.py
